--- a/widget/html/main.html
+++ b/widget/html/main.html
@@ -4,66 +4,84 @@
     <meta charset="utf-8">
     <meta name="viewport" content="maximum-scale=1.0, minimum-scale=1.0, user-scalable=0, initial-scale=1.0, width=device-width"/>
     <meta name="format-detection" content="telephone=no, email=no, date=no, address=no">
-    <title>Hello APP</title>
+    <title>My o2o</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
 	<style>
-		#con{
-			margin: 10px;
-			font-size: 24px; 
+		html,body{
+			height: 100%;
 		}
-		ul{
-			margin-bottom: 10px;
+		body{
+			display: -webkit-box;
+			display: -wekit-flex;
+			display: flex;
+			-webkit-box-orient:vertical;
 		}
-		ul li{ 
-			margin: 5px 10px;
-			background: #00f;
-			padding: 5px;
-			color: pink;
-			word-wrap: break-word;
+		header{
+			height: 50px;
+			background: #ccc;
+		}
+		.no-use{
+			/* -moz-box-flex: 1; 
+					    -webkit-box-flex: 1; 
+					    box-flex: 1;
+			 */
+			 -webkit-box-flex:1;
+			 -webkit-flex:1;
+			 flex: 1;
+		}
+		footer{
+			height: 50px;
+			background: blue;
+			display: -webkit-box;
+			display: -wekit-flex;
+			display: flex;
+			webkit-box-orient: horizontal;
+		}
+		footer>div{
+			-webkit-box-flex:1;
+			-webkit-flex:1;
+			flex: 1;
 		}
 	</style>
 </head>
 <body>
-    <label id="con">Hello APP</label>
-	<div id='sys-info'></div>
-	<p>women 你们喜欢吗?</p>
+    <header></header>
+    <div class="no-use"></div>
+    <footer>
+    	<div>首页</div>
+    	<div>团购</div>
+    	<div>发现</div>
+    	<div>我的</div>
+
+    </footer>
 </body>
 <script type="text/javascript" src="../script/api.js"></script>
 <script type="text/javascript">
-    apiready = function(){
-		var ver = api.version;
-		var sType = api.systemType;
-		var sVer = api.systemVersion;
-		var id = api.deviceId;
-		var model = api.deviceModel;
-		var name = api.deviceName;
-		var cType = api.connectionType;
-		var winName = api.winName;
-		var winWidth = api.winWidth;
-		var winHeight = api.winHeight;
-		var frameName = api.frameName || '';
-		var frameWidth = api.frameWidth || '';
-		var frameHeight = api.frameHeight || '';
+apiready = function(){
+	var header = $api.dom('header');
+	var footer = $api.dom('footer');
+	$api.fixStatusBar(header);
+	var hh = $api.offset(header).h;
+	var fh = $api.offset(footer).h;
+    
+    api.openFrame({
+        name: 'home_frame',
+        url: './home_frame.html',
+        rect: {
+            x: 0,
+            y: hh,
+            w: 'auto',
+            h: api.winHeight - hh - fh
+        },
+        pageParam: {
+            name: 'test'
+        },
+        bounces: true,
+        bgColor: 'rgba(0,0,0,0)',
+        vScrollBarEnabled: true,
+        hScrollBarEnabled: true
+    });
+}
 
-		var str = '<ul>';
-		str += '<li>引擎版本信息: ' + ver + '</li>';
-		str += '<li>系统类型: ' + sType + '</li>';
-		str += '<li>系统版本: ' + sVer + '</li>';
-		str += '<li>设备标识: ' + id + '</li>';
-		str += '<li>设备型号: ' + model + '</li>';
-		str += '<li>设备名称: ' + name + '</li>';
-		str += '<li>网络状态: ' + cType + '</li>';
-		str += '<li>主窗口名字: ' + winName + '</li>';
-		str += '<li>主窗口宽度: ' + winWidth + '</li>';
-		str += '<li>主窗口高度: ' + winHeight + '</li>';
-		str += '<li>子窗口名字: ' + frameName + '</li>';
-		str += '<li>子窗口宽度: ' + frameWidth + '</li>';
-		str += '<li>子窗口高度: ' + frameHeight + '</li>';
-		str += '<li>子窗口高度: ' + ni门号码 + '</li>';
-		str += '</ul>';
-
-		$api.byId('sys-info').innerHTML = str;
-
-    };
 </script>
 </html>
