--- a/widget/html/main.html
+++ b/widget/html/main.html
@@ -240,7 +240,40 @@
     </style>
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="header-item header-item-act" id="home">
+            <div class="home-citylist">
+                <span class="currentCity">北京</span>
+                <img src="../image/header/arrow_down_home.png">
+            </div>
+            <div class="home-search">
+                <img src="../image/header/search_home.png">
+                <span>输入商户名、地点</span>
+            </div>
+            <div class="home-msg">
+                <img src="../image/header/msg_home.png">
+            </div>
+        </div>
+        <div class="header-item" id="groupbuy">
+            <div class="groupbuy-citylist">
+                <span class="currentCity">北京</span>
+                <img src="../image/header/arrow_down_groupbuy.png">
+            </div>
+            <div class="groupbuy-search">
+                <img src="../image/header/search_groupbuy.png"> 搜索团购...
+            </div>
+        </div>
+        <div class="header-item" id="find">
+            <div class="find-search">
+                <img src="../image/header/search_groupbuy.png"> 输入商户名、地点
+            </div>
+            <div class="find-scanner">
+                扫一扫
+            </div>
+        </div>
+        <div class="header-item" id="my">
+        </div>
+    </header>
     <div class="no-use"></div>
     <footer>
     	<div class="active" onclick="fnSwitchFrame(0);">首页</div>
