--- a/widget/html/main.html
+++ b/widget/html/main.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="maximum-scale=1.0, minimum-scale=1.0, user-scalable=0, initial-scale=1.0, width=device-width"/>
+    <meta name="viewport" content="maximum-scale=1.0, minimum-scale=1.0, user-scalable=0, initial-scale=1.0, width=device-width" />
     <meta name="format-detection" content="telephone=no, email=no, date=no, address=no">
-    <title>My o2o</title>
+    <title>Hello APP</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
-	<style>
+    <style>
         html,
         body {
             height: 100%;
@@ -239,6 +240,7 @@
         }
     </style>
 </head>
+
 <body>
     <header>
         <div class="header-item header-item-act" id="home">
@@ -276,61 +278,79 @@
     </header>
     <div class="no-use"></div>
     <footer>
-    	<div class="active" onclick="fnSwitchFrame(0);">首页</div>
-    	<div onclick="fnSwitchFrame(1);">团购</div>
-    	<div onclick="fnSwitchFrame(2);">发现</div>
-    	<div onclick="fnSwitchFrame(3);">我的</div>
-
+        <div class="active" onclick="fnSwitchFrame(0);">首页</div>
+        <div onclick="fnSwitchFrame(1);">团购</div>
+        <div onclick="fnSwitchFrame(2);">发现</div>
+        <div onclick="fnSwitchFrame(3);">我的</div>
     </footer>
 </body>
 <script type="text/javascript" src="../script/api.js"></script>
 <script type="text/javascript">
-var frames = ['home_frame', 'groupbuy_frame', 'find_frame', 'my_frame'];
-var footerButtons;
-var headerHeight, footerHeight;
-apiready = function(){
-	var header = $api.dom('header');
-	var footer = $api.dom('footer');
-	$api.fixStatusBar(header);
-	var headerHeight = $api.offset(header).h;
-	var footerHeight = $api.offset(footer).h;
-    //将页脚4个按钮选择出来
-    footerButtons = $api.domAll(footer, 'div');
+    var frames = ['home_frame', 'groupbuy_frame', 'find_frame', 'my_frame'];
+    var headers;
+    var footerButtons;
+    var headerHeight, footerHeight;
 
-    fnSwitchFrame(0);
+    apiready = function() {
+        var header = $api.dom('header');
+        var footer = $api.dom('footer');
 
-}
-//在4个FRAME之间切换
-function fnSwitchFrame(index){
-	for (var i = 0; i < frames.length; i++) {
-		if (index == i) {
-			var frameHeight = api.frameHeight - headerHeight - footerHeight;
-			api.openFrame({
-        name: frames[i],
-        url: './' + frames[i] + '.html',
-        rect: {
-            x: 0,
-            y: headerHeight,
-            w: 'auto',
-            h: frameHeight
-        },
-        bounces: false
-    });
-			//为选中的增加active
-			$api.addCls(footerButtons[i], 'active');
-		} else {
-			api.setFrameAttr({
-				name : frames[i],
-				hidden : true
-			});
-			//将未选中的按钮去除样式
-			$api.removeCls(footerButtons[i], 'active');
-		}
-	}
-}
+        $api.fixStatusBar(header);
 
-    
+        headerHeight = $api.offset(header).h;
+        footerHeight = $api.offset(footer).h;
 
+        //将页脚的4个按钮选出来
+        headers = $api.domAll(header, '.header-item');
+        footerButtons = $api.domAll(footer, 'div');
 
+        fnSwitchFrame(0);
+    };
+
+    //在4个FRAME之间切换
+    function fnSwitchFrame(index) {
+        for (var i = 0; i < frames.length; i++) {
+            //当frame是选中的frame时
+            if (index == i) {
+                //可以对比一下api.winHeight和api.frameHeight的区别
+                // var topDistance =  headerHeight;
+                // if(index==3){
+                //     topDistance=0;
+                // }
+                var topDistance = index == 3 ? 0 : headerHeight;
+                var frameHeight = api.frameHeight - topDistance - footerHeight;
+
+                api.openFrame({
+                    name: frames[i],
+                    url: './' + frames[i] + '.html',
+                    bounces: false,
+                    rect: {
+                        x: 0,
+                        y: topDistance,
+                        w: 'auto',
+                        h: frameHeight
+                    }
+                });
+
+                //为选中的按钮加选中样式
+                $api.addCls(headers[i], 'header-item-act');
+                $api.addCls(footerButtons[i], 'active');
+            } else {
+                // api.closeFrame({
+                //     name: frames[i]
+                // });
+
+                api.setFrameAttr({
+                    name: frames[i],
+                    hidden: true
+                });
+
+                //将未选中的按钮们去掉选中样式
+                $api.removeCls(headers[i], 'header-item-act');
+                $api.removeCls(footerButtons[i], 'active');
+            }
+        }
+    };
 </script>
+
 </html>
