--- a/widget/index.html
+++ b/widget/index.html
@@ -17,7 +17,30 @@
 <script type="text/javascript" src="./script/api.js"></script>
 <script type="text/javascript">
 apiready = function() {
-    api.openFrameGroup({
+    api.getPrefs({
+        key: 'isFirstWelcome'
+    }, function(ret, err){
+        if (ret.value === '') {
+
+            fnFirstWelcome();
+            api.setPrefs({
+                key: 'isFirstWelcome',
+                value: true
+        });
+        
+
+    }else{
+
+        api.openWin({
+            name: 'main',
+            url: './html/main.html',
+            bounces: false
+        });
+    }
+   });
+}
+    function fnFirstWelcome(){
+        api.openFrameGroup({
         name: 'welcome_frame_group',
         scrollEnabled: true,
         rect: {
@@ -52,13 +75,7 @@ apiready = function() {
        var name  = ret.name;
        var index = ret.index;
     });
-
-    // api.openWin({
-    //     name: 'main',
-    //     url: './html/main.html',
-    //     bounces: false
-    // });
-};
+ }   
 </script>
 
 </html>
